# DataScience_IoT_projects

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_change_background.py  streamlit_tools.py
Projets/Anomalies_vibratoires_accelerometre_AE_debruitage/: DenoisingAutoencoder_file.py  README.md  Raw_data_5000.txt  arduino_code.ino  model.pt  streamlit_real_time_interface.py
Projets/Creation_carte_profondeur/: data.txt  save_data.py
Projets/Deformation_structure/: README.md  arduino_code.ino  data_managing.py  sensor_initial_positions.json  sensor_positions.json  streamlit_app.py  utils.py
Projets/Station_meteo_prediction_temps_ML/: README.md  arduino_code.ino  data_managing.py  run_weather_station.sh  schema_circuit.fzz  streamlit_app.py  utils.py
Projets/Station_meteo_prediction_temps_ML/.streamlit/: config.toml
