[project]
name = "datascience-iot-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "fastdist>=1.1.6",
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "paho-mqtt>=2.1.0",
    "plotly>=6.5.0",
    "pymongo>=4.15.5",
    "serial>=0.0.97",
    "streamlit>=1.51.0",
    "torch>=2.9.1",
]
